--- a/src/style.css
+++ b/src/style.css
@@ -761,3 +761,7 @@
             .item {
                 box-shadow: 50px;
             }
+            
+            .edu-font {
+                font-size: x-large;
+            }
