--- a/CSS/mobile-style.css
+++ b/CSS/mobile-style.css
@@ -155,8 +155,15 @@
         }
     }
     
+    @media only screen and (min-width: 700px) {
+        .rounded-circle {
+            height: 100%;
+        }
+    }
+    
     @media only screen and (min-width: 770px) and (max-width: 999px) {
         .rounded-circle {
+            height: 65%;
             width: 100%;
         }
     }
