--- a/CSS/style.css
+++ b/CSS/style.css
@@ -393,11 +393,7 @@
                 height: 100%;
                 top: 0;
                 left: 0;
-                background: rgba(93, 84, 240, 0.5);
-                background: -webkit-linear-gradient(left, rgba(0, 168, 255, 0.5), rgba(185, 0, 255, 0.5));
-                background: -o-linear-gradient(left, rgba(0, 168, 255, 0.5), rgba(185, 0, 255, 0.5));
-                background: -moz-linear-gradient(left, rgba(0, 168, 255, 0.5), rgba(185, 0, 255, 0.5));
-                background: linear-gradient(left, rgba(0, 168, 255, 0.5), rgba(185, 0, 255, 0.5));
+                background: transparent;
                 pointer-events: none;
             }
             
@@ -412,7 +408,7 @@
             
             .wrap-contact100 {
                 width: 800px;
-                background: #fff;
+                background: transparent;
                 border-radius: 10px;
                 overflow: hidden;
                 padding: 72px 150px 25px 150px;
@@ -444,7 +440,7 @@
             .wrap-input100 {
                 width: 100%;
                 position: relative;
-                background-color: #fff;
+                background-color: transparent;
                 border-radius: 20px;
                 margin-bottom: 30px;
             }
