--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,7 +22,7 @@
             body {
                 margin: 0;
                 padding: 0;
-                background: linear-gradient(rgba(1, 1, 1, 0.9), rgba(1, 1, 1, 0.9)), url("../images/Coding.jpg");
+                background: linear-gradient(rgba(1, 1, 1, 0.9), rgba(1, 1, 1, 0.9)), url("../images/code.jpg");
                 background-color: #000000;
                 /* Used if the image is unavailable */
                 background-position: center;
