--- a/CSS/style.css
+++ b/CSS/style.css
@@ -280,14 +280,14 @@
             .btn-siz {
                 width: fit-content;
                 height: 20px;
-                margin-top: -4px;
+                margin-top: 2px;
                 margin-left: 10%;
             }
             
             .btn-sizf {
                 width: fit-content;
                 height: 20px;
-                margin-top: -4px;
+                margin-top: 2px;
                 margin-left: 0;
             }
             
@@ -422,7 +422,12 @@
                 opacity: 0.8;
             }
             
-            .input {
+            input {
                 background-color: blue;
                 color: blueviolet;
             }
+            /* .item {
+                border-bottom: 1px orange solid;
+                border-left: 1px orange solid;
+                border-top: 1px orange solid;
+            } */
